tests/derive_rc/fails/noderive.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/noderive.rs:28:5
   |
28 |     const_assert!(impls!(Rc<AtomicCounter>:  Counter));
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
